--- a/Sessionweb-Web/README
+++ b/Sessionweb-Web/README
@@ -1,6 +1,41 @@
 =SessionWeb=
 Sessionweb require PHP5 and MYSQL to work.
-If you do not know how to install/configure it please use XAMPP Server (http://www.apachefriends.org/en/xampp.html)
+If you do not know how to install/configure it please use XAMPP Server 
+(http://www.apachefriends.org/en/xampp.html)
+
+==SessionWeb 1.4==
+Go to sessionweb/install to install/upgrade
+
+Upgrade manually:
+If you can not upgrade please manualy execute install/SessionwebDbLayoutDelta_1.3-_1.4.sql to 
+upgrade from 1.3->1.4
+
+Install manualy:
+got to sessionweb/install/install.php to check that r/w of folders then
+execute install/SessionwebDbLayout_1.4.sql
+then create a file called sessionweb/config/db.php.inc
+Content of file(Change user and password not host and db name):
+<?php
+        define('DB_HOST_SESSIONWEB', 'localhost');
+        define('DB_USER_SESSIONWEB', 'sw');
+        define('DB_PASS_SESSIONWEB', '2easy');
+        define('DB_NAME_SESSIONWEB', 'sessionwebos');
+?>
+
+===Issue list for this release===
+Issue   Status	Milestone	Summary
+33	Fixed	Release1.4	Append debrief notes instead of overwrite them
+34	Fixed	Release1.4	Remove test file written when testing RW of FS
+35	Fixed	Release1.4	Add counterstring functionality to menu
+37	Fixed	Release1.4	Debrief by manager not working
+38	Fixed	Release1.4	Close session not working
+39	Fixed	Release1.4	Enhancement: Radio buttons instead of check boxes for debrief
+40	Fixed	Release1.4	Attachment header does not have correct layout
+41	Fixed	Release1.4	Move debrief icon to the right
+
+
+
+
 
 ==SessionWeb 1.3==
 Attachments to sessions implemented
@@ -16,11 +51,15 @@ Misc bugfixes
 ===Installations Instructions===
 For new installation follow 1.0 instruction
 For Upgrade from 1.0-1.1:
-Replace all files in your sessionweb folder with the new once and execute the config/SessionwebDbLayoutDeelta_1.0-_1.1_DRAFT.sql script to modify the database.
-If you are sessonweb on unix/linux/mac please check that the include/StoplistWordCloud.txt have the correct read/write permissions (chmod 666 include/StoplistWordCloud.txt). This is needed to be able to add words to the list.
+Replace all files in your sessionweb folder with the new once and execute the 
+config/SessionwebDbLayoutDeelta_1.0-_1.1_DRAFT.sql script to modify the database.
+If you are sessonweb on unix/linux/mac please check that the include/StoplistWordCloud.txt have 
+the correct read/write permissions (chmod 666 include/StoplistWordCloud.txt). This is needed to 
+be able to add words to the list.
 ====What is new in 1.1====
 Wordcloud of a session when viewing it. Possible to switch off and on for admin under settings.
 
 ==SessionWeb 1.0==
 ===Installations Instructions===
-Put the content into on a web server and browse to sessionweb/install.php page and follow the instructions.
+Put the content into on a web server and browse to sessionweb/install.php page and follow the 
+instructions.
